--- a/index.html
+++ b/index.html
@@ -98,31 +98,10 @@
                 <p><strong>Se você for 1% melhor a cada dia, em um ano você vai ser 365% melhor do que é hoje.</strong></p>
             </div>   
         </div>
-        <!--<h1>a lógica do</h1>
-        <h2>App P3</h2>
-        <h3>Parte 02: Compromissos “importantes”</h3>
-        <pre>
-            Os maiores vilões da produtividade são os compromissos importantes: calls, reuniões, conversas, cafezinhos com clientes, treinamentos…
-
-            Isso rouba muito tempo e a gente não percebe. O problema é que várias dessas reuniões são realmente importantes, outras nem tanto. O primeiro ponto é filtrar, o segundo é aprender a agendar de maneira inteligente. 
-            Se você está sempre ocupado, nunca vai estar concentrado. Seu poder de realização está na concentração da parte 1. 
-
-            Compromissos são importantes para que a vida não pare, ações de concentração são importantes para que seus projetos avancem. Lembre desse ditado: Quem está ocupado demais não tem tempo para ganhar dinheiro. 
-
-        </pre>
-        <h1>a lógica do</h1>
-        <h2>App P3</h2>
-        <h3>Parte 03: Vida pessoal</h3>
-        <pre>
-            Não adianta ser uma máquina de trabalho e deixar a vida pessoal para trás, no longo prazo é insustentável, a máquina vai pifar. Ou a saúde vai cobrar a conta, ou o relacionamento, ou mesmo a saúde mental. 
-
-            O problema contemporâneo de cuidar da vida pessoal, é o excesso de opções: meditação, musculação, yoga, tênis, natação, terapia, leitura, alongamento, cromoterapia, almoço com amigos, tempo com a família, passear com os cachorros, viver dá muito trabalho. Tudo isso é importante, mas é impossível fazer tudo. O jeito vai ser escolher o que fazer, fazer com presença e ser feliz com suas escolhas.
-
-        </pre>-->
     </div>
 
-    <div>
-        <div class="titulo-o-sucesso-p3">
+    <div class="container">
+        <div class="titulo-o-sucesso-p3 ">
             <h1>O segredo do sucesso do App3</h1>
             <h2>o hoje, todo santo dia</h2>
         </div>
@@ -147,46 +126,49 @@
                     </ul>
                 </div>
             </div>
-            <img class="o-sucesso-p3-2-1 none-phone" src="imagem/web-1920/Web-1920–15-0.png" alt="">
-            <div class="o-sucesso-p3-2 none-phone">
-                <img src="imagem/web-1920/Web 1920 – 15-1.png" alt="">
-            </div>
-        </div>
-        <div class="container">
-            <div class="planner-bar">
-                <div class="simbolos">
-                    <div>
-                        <span class="image-16">
-                            <img src="imagem/simbolos/record.svg" alt="círculo">
-                            <img src="imagem/simbolos/record.svg" alt="círculo">
-                            <img src="imagem/simbolos/record.svg" alt="círculo">
-                        </span>
-                        <span class="simbolos-block-2">
-                            <span><img class="image-19" src="imagem/simbolos/document-text.svg" alt="simbolo documento de texto"></span>
-                            <span class="image-18">
-                                <img src="imagem/simbolos/less-than.svg" alt="seta para esquerda">
-                                <img src="imagem/simbolos/more-than.svg" alt="seta para direita">
-                            </span>
-                        </span>
-                    </div>
-                    <span><img class="image-18 caixa-planner" src="imagem/simbolos/box-four-squares.svg" alt="caixa"></span>
+            <div>
+                <img class="o-sucesso-p3-2-1 none-phone" src="imagem/web-1920/Web-1920–15-0.png" alt="">
+                <div class="o-sucesso-p3-2 none-phone">
+                    <img src="imagem/web-1920/Web 1920 – 15-1.png" alt="">
                 </div>
-                <div class="planner3-com">
-                <img class="image-15" src="imagem/simbolos/search-normal.svg" alt="lupa">
-                <p>planner3.com.br/main</p>
-                </div>
-            </div>
-           <div class="gif-p3">
-                <video class="gif-p3-1 container none-phone" autoplay loop src="videos/video-component-2-full-screen.mp4" ></video>
-                <div class="gif-p3-phone none">
-                    <video class="gif-p3-1 container" autoplay loop src="videos/video-component-2-full-screen.mp4" ></video>
-                    <video class="gif-p3-1-2 container none" autoplay loop src="videos/video-component-2-full-screen.mp4"></video>
-                    <video class="gif-p3-2 none" autoplay loop src="videos/video-component-2-phone.mp4" ></video>
-                </div>
-                <video class="gif-p3-2 none-phone"  autoplay loop src="videos/video-component-2-phone.mp4" ></video>
             </div>
         </div>
     </div>
+    <div class="container teste">
+        <div class="planner-bar">
+            <div class="simbolos">
+                <div>
+                    <span class="image-16">
+                        <img src="imagem/simbolos/record.svg" alt="círculo">
+                        <img src="imagem/simbolos/record.svg" alt="círculo">
+                        <img src="imagem/simbolos/record.svg" alt="círculo">
+                    </span>
+                    <span class="simbolos-block-2">
+                        <span><img class="image-19" src="imagem/simbolos/document-text.svg" alt="simbolo documento de texto"></span>
+                        <span class="image-18">
+                            <img src="imagem/simbolos/less-than.svg" alt="seta para esquerda">
+                            <img src="imagem/simbolos/more-than.svg" alt="seta para direita">
+                        </span>
+                    </span>
+                </div>
+                <span><img class="image-18 caixa-planner" src="imagem/simbolos/box-four-squares.svg" alt="caixa"></span>
+            </div>
+            <div class="planner3-com">
+            <img class="image-15" src="imagem/simbolos/search-normal.svg" alt="lupa">
+            <p>planner3.com.br/main</p>
+            </div>
+        </div>
+        <div class="gif-p3">
+            <video class="gif-p3-1 none-phone" autoplay loop src="videos/video-component-2-full-screen.mp4" ></video>
+            <div class="gif-p3-phone none">
+                <video class="gif-p3-1 container" autoplay loop src="videos/video-component-2-full-screen.mp4" ></video>
+                <video class="gif-p3-1-2 container none" autoplay loop src="videos/video-component-2-full-screen.mp4"></video>
+                <video class="gif-p3-2 none" autoplay loop src="videos/video-component-2-phone.mp4" ></video>
+            </div>
+            <video class="gif-p3-2 none-phone"  autoplay loop src="videos/video-component-2-phone.mp4" ></video>
+        </div>
+    </div>
+    
 
     <div class="none-phone">
         <div class="assinar-bar container" >
@@ -194,9 +176,9 @@
             <h1>R$ 9,90*</h1>
             <h2>no Plano anual</h2>
             <img src="imagem/Separador/vector-13.svg" alt="vetor">
-            <img style="background-color: black;" src="imagem/simbolos/verify.svg" alt="verificado">
+            <img src="imagem/simbolos/verify.svg" alt="verificado">
             <h3>Garantia de 7 dias</h3>
-            <img style="background-color: black;"" src="imagem/simbolos/unlock.svg" alt="desbloqueado">
+            <img  src="imagem/simbolos/unlock.svg" alt="desbloqueado">
             <h3>Acesso Imediato</h3>
         </div>
     </div>
@@ -210,9 +192,9 @@
             </div>
             <img id="assinar-bar-phone-vector" src="imagem/Separador/vector-13.svg" alt="vetor">
             <div class="assinar-bar-phone-2">
-                <img style="background-color: black;" src="imagem/simbolos/verify.svg" alt="verificado">
+                <img src="imagem/simbolos/verify.svg" alt="verificado">
                 <h3>Garantia de 7 dias</h3>
-                <img style="background-color: black;"" src="imagem/simbolos/unlock.svg" alt="desbloqueado">
+                <img  src="imagem/simbolos/unlock.svg" alt="desbloqueado">
                 <h3>Acesso Imediato</h3>
             </div>
         </div>
@@ -381,7 +363,7 @@
     <div>
         <div class="embasamento container">
             <h1>Embasamento científico</h1>
-            <hr class="none-phone">
+            <span class="embasamento-line none-phone"></span>
             <h2>O Método Planner 3 foi construído com base em estudos científicos ao longo de pesquisas da jornada de desenvolvimento pessoal e produtividade de Leandro Ladeira.
             </h2>
         </div>
@@ -389,7 +371,6 @@
         <div class="estudos none-phone">
             <button id="estudos-arrow-1"><img  src="imagem/simbolos/arrow-left.svg" alt=""></button>
             <img class="estudos-1" id="car" src="" alt="">
-            <div id="estudos-box"></div>
             <button id="estudos-arrow-2"><img  src="imagem/simbolos/arrow-right.svg" alt=""></button>
         </div>
         
