--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       href="https://fonts.googleapis.com/css2?family=Anek+Gujarati:wght@100;200;300;400;500;600;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Sora:wght@100;200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Teste Prático</title>
+    <title>Planner 3</title>
   </head>
   <body>
     <div class="gradient-background">
